@@ -1,3 +1,12 @@
+2007-02-15  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/gazpacholoader.py (ModelProperty._on_widget__notify): 
+	Track the name as the default model-attribute
+
+	* kiwi/ui/proxy.py (Proxy._setup_widget): Do not require 
+	model-attribute to be explicitly set. Use the widget name
+	if it's not set.
+
 2007-02-14  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/component.py: Make providedBy check in subclasses, makes
